syntax = "proto3";
option csharp_namespace = "BeaconTower.Protocol";
package BeaconTower;


import "enums.proto";


message NodeActiveRequest {
  int64 TraceID=1;
  string NodeID = 2;
  int64 EventID=3;
  int64 PreviousEventID =4;
  NodeTypeEnum NodeType=5;
  string Path=6;
  string QueryString=7;
  int64 TimeStamp=8;  
  map<string,string> CustomData=9;
  
}
   
message MethodActiveReuqest{
  int64 TraceID=1;
  string NodeID=2;
  int64 EventID=3;
  int64 MethodEventID=4;
  int64 MethodID=5;
  int64 PreMethodEventID=6;
  string MethodName=7;
  string FileName=8;
  int32 LineNumber=9;
  int64 TimeStamp=10; 
  map<string,string> CustomData=11;
}

message GetStateRequest{
  int64 TimeStamp=1;
}

message LogRequest{
	int64 TraceID=1;	
	int64 EventID=2;
	int64 MethodID=3;
	int64 MethodEventID=4;
	string MethodName=5;
	string FileName=6;
	int32 LineNumber=7;
	int64 TimeStamp=8;	
	string Message=9; 
	map<string,string> CustomData=10;
}